@@ -5,15 +5,14 @@ Notebot is distributed in the hope that it will be useful, but WITHOUT ANY WARRA
 You should have received a copy of the GNU General Public License along with Notebot. If not, see <https://www.gnu.org/licenses/>.
 */
 
-package xyz.nat1an.notebot.utils;
+package xyz.chara.notebot.utils;
 
-import net.minecraft.client.MinecraftClient;
 import org.slf4j.Logger;
-import xyz.nat1an.notebot.Notebot;
+
+import xyz.chara.notebot.Notebot;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class NotebotFileManager {
 
@@ -21,9 +20,10 @@ public class NotebotFileManager {
     private static Logger logger = Notebot.LOGGER;
 
     public static void init() {
-        dir = Paths.get(MinecraftClient.getInstance().runDirectory.getPath(), "notebot/");
-        if (!dir.toFile().exists()) {
-            dir.toFile().mkdirs();
+        dir = Path.of("notebot/");
+        var _dir = Path.of("notebot/songs");
+        if (!_dir.toFile().exists()) {
+            _dir.toFile().mkdirs();
         }
     }
 
